samples/_failures_safe/1761326492_8db132_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a855b009.c: In function ‘print_simulation_state’:
./samples/SAFE/__tmp_a855b009.c:117:16: error: missing terminating " character
  117 |         printf("Object %zu: Pos(%.2f, %.2f, %.2f) Vel(%.2f, %.
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a855b009.c:117:9: error: expected expression at end of input
  117 |         printf("Object %zu: Pos(%.2f, %.2f, %.2f) Vel(%.2f, %.
      |         ^~~~~~
./samples/SAFE/__tmp_a855b009.c:117:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a855b009.c:117:9: error: expected declaration or statement at end of input
